WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24817
Slider fails to draw for empty video element (divide by zero in slider code)
https://bugs.webkit.org/show_bug.cgi?id=24817
Summary
Slider fails to draw for empty video element (divide by zero in slider code)
Simon Fraser (smfr)
Reported
2009-03-25 14:46:14 PDT
For a media element with no src attribute, the slider in the controls ends up with a min and max of zero, which results in a divide by zero in the SliderRange code. This causes the slider to fail to draw.
Attachments
Testcase
(520 bytes, text/html)
2009-03-25 14:46 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch, testcase, changelog
(5.48 KB, patch)
2009-03-25 14:53 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Final patch
(5.90 KB, patch)
2009-03-25 15:13 PDT
,
Simon Fraser (smfr)
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-03-25 14:46:36 PDT
Created
attachment 28948
[details]
Testcase
Darin Adler
Comment 2
2009-03-25 14:47:26 PDT
Oops! This should be trivial to fix.
Simon Fraser (smfr)
Comment 3
2009-03-25 14:53:27 PDT
Created
attachment 28949
[details]
Patch, testcase, changelog
Simon Fraser (smfr)
Comment 4
2009-03-25 14:55:48 PDT
Comment on
attachment 28949
[details]
Patch, testcase, changelog Verbal r=darin
Simon Fraser (smfr)
Comment 5
2009-03-25 15:07:14 PDT
Comment on
attachment 28949
[details]
Patch, testcase, changelog Better patch coming.
Simon Fraser (smfr)
Comment 6
2009-03-25 15:13:09 PDT
Created
attachment 28950
[details]
Final patch Carry Darin's review forward.
Simon Fraser (smfr)
Comment 7
2009-03-25 15:13:20 PDT
http://trac.webkit.org/changeset/41987
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug